Made leaderboard tables look pretty had to fix the spacing with php leaderboard tables

--- a/css/base.css
+++ b/css/base.css
@@ -59,14 +59,14 @@ canvas {
 #addName {
     position: absolute;
     left:  42%;
-    top: 49%;
+    top: 52%;
     display: none;
 }
 
 #submitButton {
     position: absolute;
     left: 60%;
-    top: 49%;
+    top: 52%;
     display: none;
 }
 .hide { 
@@ -77,12 +77,31 @@ canvas {
 }
 #leaderboardTable {
     position: absolute;
-    padding-left: 2%;
-    padding-top: 15%;
+    top: 25%;
+    width: 100%;
     display: none;
+    overflow-x: auto;
 }
-table th, table td {
-    font-size: 1.5em;
-    padding: 0 5%; 
+table {
+    border-collapse: collapse;
+    border: 1px solid black;
+    width: 100%;
+}
+th td {
+    padding: 3px;
+}
+td {
     text-align: center;
+}
+tr {
+    text-align: center;
+}
+th {
+    background-color: #7E9772;
+}
+tr:nth-child(even) {
+    background-color: #FFFFFF;
+}
+tr:nth-child(odd) {
+    background-color: #d3d3d3;
 }
